Add executable with library on same folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(cenutrio C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(hello hello/main.c)
+add_executable(overview_harbison overview.harbison/startup.c overview.harbison/hello.h overview.harbison/hello.c)
