Add a sample c code with loops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ include_directories("/Users/g/1/jawa/substratevm/clibraries/target/src/fdlibm")
 target_link_libraries(fdlibm libfdlibm)
 
 add_executable(e_log e_log/e_log.c)
+add_executable(debug_symbols_test debug-symbols/test.c)
