--- a/llvm-kaleidoscope/Makefile
+++ b/llvm-kaleidoscope/Makefile
@@ -1,3 +1,11 @@
-compile:
-	clang++ -g -O3 toy.cpp `llvm-config --cxxflags` `llvm-config --libs --ldflags` `llvm-config --system-libs`
+all: compile run
 
+# TODO chapter 2 recommendation does not work, see the following to make it work:
+compile:
+	clang++ -g -O3 toy.cpp `llvm-config --cxxflags` `llvm-config --libs --ldflags` `llvm-config --system-libs` -o toy
+
+# TODO chapter 3 recommending the following, does it work?
+# clang++ -g -O3 toy.cpp `llvm-config --cxxflags --ldflags --system-libs --libs core` -o toy
+
+run:
+	./toy
