Sent patch to llvm with tutorial fixes

--- a/llvm-kaleidoscope/Makefile
+++ b/llvm-kaleidoscope/Makefile
@@ -4,15 +4,8 @@
 
 all: compile run
 
-# TODO chapter 2 recommendation does not work, see the following to make it work:
 compile:
-	clang++ -g -O3 toy.cpp `llvm-config --cxxflags` `llvm-config --libs --ldflags` `llvm-config --system-libs` -o toy
-
-# TODO chapter 3 recommending the following, does it work?
-# clang++ -g -O3 toy.cpp `llvm-config --cxxflags --ldflags --system-libs --libs core` -o toy
-
-# TODO chapter 4 recommending the following:
-# clang++ -g toy.cpp `llvm-config --cxxflags --ldflags --system-libs --libs core mcjit native` -O3 -o toy
+	clang++ -g -O3 toy.cpp `llvm-config --cxxflags --libs --ldflags --system-libs` -o toy
 
 run:
 	./toy
