Produce bitcode with llvm

--- a/llvm-kaleidoscope/Makefile
+++ b/llvm-kaleidoscope/Makefile
@@ -7,5 +7,8 @@ all: compile run
 compile:
 	clang++ -g -O3 toy.cpp `llvm-config --cxxflags --libs --ldflags --system-libs` -o toy
 
+bitcode:
+	clang++ -O3 -emit-llvm toy.cpp `llvm-config --cxxflags` -c -o toy.bc
+
 run:
 	./toy
